# Multi-Agent-Project

./: .env.example  .gitignore  alembic.ini  config.yaml  facts.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_resume_used.py  0003_split_jobs_pipeline.py  0004_add_status_history_outreach.py  0005_add_pipeline_company_title_url.py
src/jobops/: __main__.py
src/jobops/agents/apply/: ashby.py  base.py  downloader.py  greenhouse.py  lever.py  question_ai.py  runner.py
src/jobops/agents/discovery/: client.py  dedup.py  filters.py  ingest.py  runner.py
src/jobops/agents/scorer/: rules.py  runner.py  scorer.py
src/jobops/agents/tailor/: drive.py  renderer.py  runner.py  tailor.py
src/jobops/agents/tailor/templates/: resume.html.j2
src/jobops/cli/: __main__.py  apply_cli.py  db_cli.py  discover_cli.py  scorer_cli.py  tailor_cli.py
src/jobops/db/: db.py  models.py
tests/: test_db.py  test_discovery.py  test_scorer.py
